--- a/config/database.yml
+++ b/config/database.yml
@@ -15,14 +15,18 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: 127.0.0.1
+  port: 5432
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: <%= ENV.fetch("PGUSER", "jobs_user") %>
+  password: <%= ENV.fetch("PGPASSWORD", "jobs_pass") %>
 
 
 development:
   <<: *default
-  database: baseconnect_backend_development
+  database: jobs_api_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -56,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: baseconnect_backend_test
+  database: jobs_api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
