--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,4 @@
 # config/database.yml
-
 default: &default
   adapter: postgresql
   encoding: unicode
@@ -20,18 +19,32 @@ development:
     port: 5432
     username: <%= ENV.fetch("PGUSER", "jobs_user") %>
     password: <%= ENV.fetch("PGPASSWORD", "jobs_pass") %>
-
-test:
-  primary:
+  queue:
     <<: *default
     database: jobs_api_development
     host: 127.0.0.1
     port: 5432
     username: <%= ENV.fetch("PGUSER", "jobs_user") %>
     password: <%= ENV.fetch("PGPASSWORD", "jobs_pass") %>
+
+test:
+  primary:
+    <<: *default
+    database: jobs_api_test
+    host: 127.0.0.1
+    port: 5432
+    username: <%= ENV.fetch("PGUSER", "jobs_user") %>
+    password: <%= ENV.fetch("PGPASSWORD", "jobs_pass") %>
   cable:
     <<: *default
-    database: jobs_api_development
+    database: jobs_api_test
+    host: 127.0.0.1
+    port: 5432
+    username: <%= ENV.fetch("PGUSER", "jobs_user") %>
+    password: <%= ENV.fetch("PGPASSWORD", "jobs_pass") %>
+  queue:
+    <<: *default
+    database: jobs_api_test
     host: 127.0.0.1
     port: 5432
     username: <%= ENV.fetch("PGUSER", "jobs_user") %>
@@ -43,4 +56,7 @@ production:
     pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   cable:
     url: <%= ENV["SOLID_CABLE_DATABASE_URL"] || ENV["DATABASE_URL"] %>
+    pool: 5
+  queue:
+    url: <%= ENV["SOLID_QUEUE_DATABASE_URL"] || ENV["DATABASE_URL"] %>
     pool: 5
